--- a/app/globals.css
+++ b/app/globals.css
@@ -53,16 +53,25 @@
   * {
     @apply border-border;
   }
-  
+
   body {
     @apply bg-background text-foreground antialiased;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
 
-  h1, h2, h3, h4, h5, h6, p {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
 
+  a {
+    z-index: 150;
+  }
   h1 {
     @apply text-4xl font-bold tracking-tight;
     line-height: 1.2;
