--- a/app/globals.css
+++ b/app/globals.css
@@ -69,12 +69,16 @@
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
 
+  p {
+    font-size: 15px;
+  }
+
   a {
     z-index: 150;
   }
   h1 {
-    @apply text-4xl font-bold tracking-tight;
-    line-height: 1.2;
+    @apply text-5xl font-bold;
+    line-height: 1;
   }
 
   h2 {
@@ -89,7 +93,7 @@
 
   p {
     @apply leading-relaxed;
-    font-size: 16px;
+    font-size: 14.5px;
   }
 
   .text-balance {
